Fix text-alignment in site footer

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,6 +1,5 @@
-.main-footer {
+.site-footer {
 	flex-shrink: 0;
 	padding: $ms-base;
 	font-size: 0.8rem;
-	text-align: center;
 }
